found_online/myiptables/firewall.conf.txt
# Generated by iptables-save v1.4.12 on Sun Aug  4 22:18:06 2013
*mangle
:PREROUTING ACCEPT [289:25704]
:INPUT ACCEPT [289:25704]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [210:50832]
:POSTROUTING ACCEPT [210:50832]
COMMIT
# Completed on Sun Aug  4 22:18:06 2013
# Generated by iptables-save v1.4.12 on Sun Aug  4 22:18:06 2013
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:424]
:POSTROUTING ACCEPT [6:424]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3000
COMMIT
# Completed on Sun Aug  4 22:18:06 2013
# Generated by iptables-save v1.4.12 on Sun Aug  4 22:18:06 2013
*raw
:PREROUTING ACCEPT [289:25704]
:OUTPUT ACCEPT [210:50832]
COMMIT
# Completed on Sun Aug  4 22:18:06 2013
# Generated by iptables-save v1.4.12 on Sun Aug  4 22:18:06 2013
*security
:INPUT ACCEPT [290:25756]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [210:50832]
COMMIT
# Completed on Sun Aug  4 22:18:06 2013
# Generated by iptables-save v1.4.12 on Sun Aug  4 22:18:06 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [210:50832]
:SSH_CHECK - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3002 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3003 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j SSH_CHECK
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j DROP
-A SSH_CHECK -m recent --set --name SSH --rsource
-A SSH_CHECK -m recent --update --seconds 300 --hitcount 4 --name SSH --rsource -j DROP
COMMIT
# Completed on Sun Aug  4 22:18:06 2013
